2016-06-24  Filip Pizlo  <fpizlo@apple.com>

        REGRESSION: Weak symbol warning when linking TestWebKitAPI
        https://bugs.webkit.org/show_bug.cgi?id=159104

        Reviewed by Mark Lam.
        
        The problem is that the tests were not compiled with -fvisibility=hidden like the rest of
        WK.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:

2016-06-24  David Kilzer  <ddkilzer@apple.com>

        parser_unittests.pl should not hardcode list of tests
        <https://webkit.org/b/159074>

        Reviewed by Daniel Bates.

        * Scripts/webkitperl/prepare-ChangeLog_unittest/parser_unittests.pl:
        Update to read the list of tests from the 'resources' directory,
        and instead map file extensions to subroutine names.  Switch to
        use File::Basename::fileparse() to get basename and file
        extension for each test.
        (readTestFiles): Added.  Reads files from the directory passed
        in and ignores: hidden files, anything that isn't a plain file,
        and expected test results files.

2016-06-23  Simon Fraser  <simon.fraser@apple.com>

        Fix Windows build.

        * DumpRenderTree/cg/PixelDumpSupportCG.cpp:
        * DumpRenderTree/cg/PixelDumpSupportCG.h:

2016-06-23  Gyuyoung Kim  <gyuyoung.kim@webkit.org>

        [EFL] Change download path of libxslt

        Unreviewed EFL build fix.

        In Korea current download path can't be accessed. Change it.

        * efl/jhbuild.modules:

2016-06-23  Simon Fraser  <simon.fraser@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=159077

        Turn off CARenderServer snapshotting in WTR for now, because it doesn't reliably
        snapshot the final state of the test in release builds. 

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::dump):

2016-06-23  Simon Fraser  <simon.fraser@apple.com>

        Fix hardware builds, where USE(IOSURFACE) is true by #ifdeffing.
